# build-static-lib

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/buildlibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/aac/: CMakeLists.txt
app/src/main/cpp/aac/include/: test.h
app/src/main/cpp/aac/src/: test.cpp
app/src/main/cpp/opus/: CMakeLists.txt
app/src/main/cpp/opus/src/: test.cpp
app/src/main/java/com/example/buildlibrary/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/buildlibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
